13/09/2020
==========
New: Container BOX: See box.prg, box2.prg, box3.prg
Updated: New clause CLASS to ROW/ROWGROUP 