@@ -312,6 +312,63 @@ function TWebBrowse( cId ) {
 	}	
 }
 
+//	-------------------------------------------------------------------------------------//
+
+/*	List rows in table and select one of them	*/
+
+function BrwSelect( headers, rows, fCallback, cTitle ) {
+
+	cTitle 	= (typeof cTitle ) == 'string' ? cTitle : '<i class="far fa-check-square"></i> Select' ;
+	
+	var nBrwHeight 	= 400
+	var cMsg 		= '<table id="_twebbrwselect" class="table-sm table-striped" ' + 
+						'data-single-select="true" data-click-to-select="true" ' + 
+						'data-height=' + nBrwHeight + ' data-toggle="table">' + 
+						'<thead class="thead-dark"><tr>' + 
+						'<th data-field="c" data-checkbox="true"></th>' 
+					
+		for (var key in headers ) {															
+			cMsg += '<th data-field="' + key + '">' + headers[key] + '</th>' 
+		}
+
+		cMsg += '</tr></thead></table>'
+
+	var dialog = bootbox.dialog({
+		title: cTitle,
+		message: cMsg,
+		size: 'medium',
+		backdrop: false,
+		onEscape: true, 
+		className: 'bounce fadeOut',
+		buttons: {
+			confirm: {
+				label: '<i class="fa fa-check"></i> Accept',
+				className: 'btn-outline-success',
+				callback: function(result) {	
+
+					if ( typeof fCallback === "function") {
+
+						var row_num = oBrw.Select()
+						
+						if ( row_num.length > 0 ) {
+							var row = row_num[0]											
+							fCallback.apply(null, [row] );
+						}																			
+					}							
+				}
+			}
+		}
+	});
+
+	dialog.init(function(){ 
+		oBrw = new TWebBrowse( '_twebbrwselect' )
+		oBrw.Init()						
+		oBrw.SetData( rows ) 
+	})				
+}	
+
+//	-------------------------------------------------------------------------------------//
+
 function TWebGetAutocomplete( cId, uSource, cSelect ) {
 
 	var DatasetUrl = function ( request, response ) {
